force-app/main/default/objects/Receipt_Allocation__c/Receipt_Allocation__c.object-meta.xml
<CustomObject>
    <label>Receipt Allocation</label>
    <nameField>
        <displayFormat>RA-{00000}</displayFormat>
        <label>Allocation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receipt Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>