force-app/main/default/objects/Receipt_Allocation__c/fields/Allocation_Type__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Type__c</fullName>
    <label>Allocation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Towards Demand</fullName><default>true</default><label>Towards Demand</label></value>
            <value><fullName>Advance</fullName><default>false</default><label>Advance</label></value>
            <value><fullName>Adjustment</fullName><default>false</default><label>Adjustment</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>