force-app/main/default/objects/Receipt_Allocation__c/fields/Amount_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Amount_Allocated__c</fullName>
    <label>Amount Allocated</label>
    <precision>14</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>