force-app/main/default/objects/Receipt_Allocation__c/fields/Receipt__c.field-meta.xml
<CustomField>
    <fullName>Receipt__c</fullName>
    <label>Receipt</label>
    <referenceTo>Receipt__c</referenceTo>
    <relationshipLabel>Allocations</relationshipLabel>
    <relationshipName>Allocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>